# API

./: .gitignore  Procfile  alembic.ini  manage.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  python-app.yml
alembic/: env.py
alembic/versions/: 353663057282_initial.py  5ecc0df40d53_modified_posts_table.py
api/: main.py
api/db/: config.py
api/db/dals/: comment_dal.py  post_dal.py  reply_dal.py  user_dal.py
api/routers/: comment_router.py  post_router.py  reply_router.py  user_router.py
api/schemas/: post_schemas.py
api/v1/: authentication.py  dependencies.py  main.py  settings.py
api/v1/db/: config.py
api/v1/db/dals/: comment_dal.py  post_dal.py  profile_dal.py  user_dal.py
api/v1/db/models/: comment_model.py  post_model.py  profile_model.py  user_model.py
api/v1/routers/: comment_router.py  post_router.py  profile_router.py  reply_router.py  root_router.py  user_router.py
api/v1/schemas/: comment_schemas.py  post_schemas.py  profile_schemas.py  response_schemas.py  user_schemas.py
app/: authentication.py  dependencies.py  main.py  requirements.txt  settings.py
app/db/: config.py
app/db/dals/: comment_dal.py  post_dal.py  reply_dal.py  user_dal.py
app/db/models/: comment_model.py  post_model.py  user_model.py
app/routers/: comment_router.py  post_router.py  reply_router.py  user_router.py
app/schemas/: comment_schemas.py  post_schemas.py  user_schemas.py
repository/: migrate.cfg
repository/versions/: 002_added_column_is_admin_to_table_users.py
tests/: test_api.py
tests/users_endpoints/: test_endpoints.py
